# GameEngineMidterm

./: .gitignore  BUILD.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  README.md  SDLLevels.sln  SDLLevels.vcxproj  SDLLevels.vcxproj.filters  VERIFICATION.md  VISUAL_STUDIO_SETUP.md  generate_textures.py
Assets/Textures/: rock.tga  warrior_death.tga  warrior_run.tga
Include/: Asset.h  AssetController.h  FileController.h  GameController.h  Level.h  Level1.h  Level2.h  ObjectPool.h  Renderer.h  Resource.h  Rock.h  Serializable.h  Singleton.h  StackAllocator.h  StandardIncludes.h  TGAReader.h  Texture.h  Warrior.h
Source/: AssetController.cpp  GameController.cpp  Level.cpp  Level1.cpp  Level2.cpp  Renderer.cpp  Rock.cpp  TGAReader.cpp  Texture.cpp  Warrior.cpp  main.cpp
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
